--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
         <title>Carousel</title>
     </head>
     <body>
+        <main class="container d-flex">
+            <div id="carousel" class="m-auto d-flex">
+                <button id="previous-img" class="my_button my_button-previous">
+                    A
+                </button>
+                <div id="img-container" class="m-auto d-flex">
+                    <img src="" id="img" alt="immagine che cicla">
+                </div>
+                <button id="next-img" class="my_button my_button-next">
+                    B
+                </button>
+                <h3 id="title" class="my_title">
+                    <!-- JS CONTENT -->
+                    blabla
+                </h3>
+                <p id="text" class="my_text">
+                    <!-- JS CONTENT -->
+                    blabla
+                </p>
+            </div>
+        </main>
         <script src="script.js"></script>
     </body>
 </html>
