--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 </p>
             </div>
         </main>
-        <script src="script.js"></script>
+        <script src="script.js">
+            // JS FILE
+        </script>
     </body>
 </html>
