added bootstrap buttons

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <body>
         <main class="container d-flex">
             <div id="carousel" class="m-auto d-flex">
-                <button id="previous-img" class="my_button my_button-previous">
-                    A
-                </button>
                 <div id="img-container" class="m-auto d-flex">
                     <img src="" id="img" alt="immagine che cicla">
                 </div>
-                <button id="next-img" class="my_button my_button-next">
-                    B
+                <button id="previous-img" type="button" class="btn btn-outline-dark my_button my_button-previous">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </button>
+                <button id="next-img" type="button" class="btn btn-outline-dark my_button my_button-next">
+                    <i class="fa-solid fa-arrow-right"></i>
                 </button>
                 <h3 id="title" class="my_title">
                     <!-- JS CONTENT -->
